--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>NgDishSelector</title>
   <!--<base href="/ng-dish-selector/">-->
-  <base href="http://2334.ol-staging.com/ng/">
+  <base href="/dish-selector-agnular-build/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
